commit img webp

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import Section from "./Section.astro";
 import { Image } from "astro:assets";
-import HeroIlust from "../../assets/pics/largo.png";
+import HeroIlust from "../../assets/pics/largo.webp";
 ---
 
 <div class="relative w-full h-[85vh] md:h-screen overflow-hidden">
