--- a/src/components/sections/Sponsors.astro
+++ b/src/components/sections/Sponsors.astro
@@ -1,11 +1,11 @@
 ---
 import { Image } from "astro:assets";
-import s1 from "../../assets/company/logoadmus.png";
-import s2 from "../../assets/company/logoafios.png";
-import s3 from "../../assets/company/logoluigui.png";
-import s4 from "../../assets/company/logoeva.png";
-import s5 from "../../assets/company/logodeseos.png";
-import s6 from "../../assets/company/logomiranda.jpg";
+import s1 from "../../assets/company/logoadmus.webp";
+import s2 from "../../assets/company/logoafios.webp";
+import s3 from "../../assets/company/logoluigui.webp";
+import s4 from "../../assets/company/logoeva.webp";
+import s5 from "../../assets/company/logodeseos.webp";
+import s6 from "../../assets/company/logo.webp";
 import Section from "./Section.astro";
 import SectionTitle from "../ui/SectionTitle.astro";
 
