--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -47,7 +47,7 @@ const navButton = { href: "/#contact", label: "Contáctanos" };
       <Astronav>
         <div class="flex w-full lg:w-auto items-center justify-between">
           <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="/Logo.svg" class="h-7 w-auto" alt="Logo" />
+            <img src="/logomiracode.webp" class="h-16 w-auto" alt="Logo" />
           </a>
           <div class="block lg:hidden">
             <div
