commmit nuevo logo

--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import decorForm from "../../assets/pics/logo3.webp";
+import decorForm from "../../assets/pics/logo4.png";
 ---
 
 <div class="relative bg-gray-50 dark:bg-gray-800 rounded-3xl overflow-hidden flex flex-col lg:flex-row">
